Fix padding overflow so it's on the right instead of card

--- a/src/app/agent/agent.component.scss
+++ b/src/app/agent/agent.component.scss
@@ -98,6 +98,6 @@
     height: 100%;
     box-sizing: border-box;
     overflow: auto;
-    padding: 20px 20px 0 10px;
+    padding: 20px 0 0 10px;
   }
 }
