--- a/src/app/agent/shared/agent-input/agent-input.component.scss
+++ b/src/app/agent/shared/agent-input/agent-input.component.scss
@@ -1,18 +1,22 @@
 .agent-input {
   height: calc(100vh - 78px);
-  padding: 4px;
   box-sizing: border-box;
   position: relative;
   overflow: hidden;
 
   .actions {
+    margin-right:20px;
     .sd-input {
       margin: 0;
     }
   }
 
+  mat-card {
+    margin-bottom: 20px;
+  }
+
   .m-20 {
-    margin-top: 20px;
+    padding-right: 20px;
     height: calc(100% - 58px);
     overflow: auto;
   }
